// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientRepository should create 1`] = `
Client {
  "_approved": true,
  "_created": 2020-01-01T07:00:00.000Z,
  "_description": "description",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "client_created",
      "payload": Object {
        "approved": true,
        "created": 2020-01-01T07:00:00.000Z,
        "description": "description",
        "extra": Object {
          "emailAuthorizationUri": "https://lindorm.io",
        },
        "name": "name",
        "secret": "c2VjcmV0",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_extra": Object {
    "emailAuthorizationUri": "https://lindorm.io",
  },
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_name": "name",
  "_secret": "c2VjcmV0",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`ClientRepository should find 1`] = `
Client {
  "_approved": true,
  "_created": 2020-01-01T07:00:00.000Z,
  "_description": "description",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "client_created",
      "payload": Object {
        "approved": true,
        "created": 2020-01-01T07:00:00.000Z,
        "description": "description",
        "extra": Object {
          "emailAuthorizationUri": "https://lindorm.io",
        },
        "name": "name",
        "secret": "c2VjcmV0",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_extra": Object {
    "emailAuthorizationUri": "https://lindorm.io",
  },
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_name": "name",
  "_secret": "c2VjcmV0",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`ClientRepository should update 1`] = `
Client {
  "_approved": true,
  "_created": 2020-01-01T07:00:00.000Z,
  "_description": "description",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "client_created",
      "payload": Object {
        "approved": true,
        "created": 2020-01-01T07:00:00.000Z,
        "description": "description",
        "extra": Object {
          "emailAuthorizationUri": "https://lindorm.io",
        },
        "name": "name",
        "secret": "c2VjcmV0",
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_extra": Object {
    "emailAuthorizationUri": "https://lindorm.io",
  },
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_name": "name",
  "_secret": "c2VjcmV0",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 1,
}
`;
